--- a/Business E-Card.html
+++ b/Business E-Card.html
@@ -58,7 +58,7 @@
         
         <!-- QR Code -->
         <div class="mt-6 flex justify-center">
-    <img src="qr-code.png" alt="QR Code" class="w-20 h-20 shadow-lg rounded-lg" style="border: 2px solid #f4e733;">
+    <img src="qr-code2.png" alt="QR Code" class="w-20 h-20 shadow-lg rounded-lg" style="border: 2px solid #f4e733;">
 </div>
         
         <!-- Social Icons with Smaller Circular Borders -->
